--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "6.11.1",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "prettier": {
+    "bracketSameLine": true,
+    "printWidth": 150
   }
 }
